--- a/src/main/webapp/resources/css/updateBoard.css
+++ b/src/main/webapp/resources/css/updateBoard.css
@@ -35,6 +35,7 @@ textarea {
     box-sizing: border-box;
 }
 
+input[type="submit"],
 input[type="button"] {
     background-color: #4CAF50;
     color: white;
@@ -49,9 +50,11 @@ input[type="button"] {
     border-radius: 3px;
 }
 
+input[type="submit"]:hover,
 input[type="button"]:hover {
     background-color: #45a049;
 }
+
 
 /* Textarea */
 textarea {
