스타일을 수정한다

--- a/src/main/webapp/resources/css/boardDetail.css
+++ b/src/main/webapp/resources/css/boardDetail.css
@@ -62,7 +62,7 @@ textarea {
     text-align: left;
 	background-color: #f9f9f9;
 	width: 100%;
-    resize: vertical;
+    resize: none;
     border: 0;
 }
 
