--- a/src/main/webapp/resources/css/loginMember.css
+++ b/src/main/webapp/resources/css/loginMember.css
@@ -24,8 +24,7 @@ form {
 
 /* Input Fields */
 input[type="text"],
-input[type="password"],
-textarea {
+input[type="password"] {
 	font-family: Arial, sans-serif;
     width: 100%;
     padding: 10px;
@@ -53,12 +52,6 @@ input[type="button"] {
 input[type="submit"]:hover,
 input[type="button"]:hover {
     background-color: #45a049;
-}
-
-
-/* Textarea */
-textarea {
-    resize: none;
 }
 
 /* Button Container */
