유효성 검사 Error 태그를 추가한다

--- a/src/main/webapp/resources/css/joinMember.css
+++ b/src/main/webapp/resources/css/joinMember.css
@@ -22,6 +22,11 @@ form {
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
+span {
+	font-family: Arial, sans-serif;
+	font-size: 13px;
+}
+
 /* Input Fields */
 input[type="text"],
 input[type="password"] {
@@ -34,7 +39,8 @@ input[type="password"] {
     box-sizing: border-box;
 }
 
-input[type="submit"] {
+input[type="submit"],
+input[type="button"] {
     background-color: #4CAF50;
     color: white;
     border: none;
@@ -48,7 +54,8 @@ input[type="submit"] {
     border-radius: 3px;
 }
 
-input[type="submit"]:hover {
+input[type="submit"]:hover,
+input[type="button"]:hover {
     background-color: #45a049;
 }
 
