--- a/src/main/webapp/resources/css/updateBoard.css
+++ b/src/main/webapp/resources/css/updateBoard.css
@@ -22,6 +22,11 @@ form {
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
+span {
+	font-family: Arial, sans-serif;
+	font-size: 13px;
+}
+
 /* Input Fields */
 input[type="text"],
 input[type="password"],
