--- a/src/main/webapp/resources/css/boardDetail.css
+++ b/src/main/webapp/resources/css/boardDetail.css
@@ -70,6 +70,11 @@ textarea:hover {
 	background-color: #f1f1f1;
 }
 
+#fileList {
+	font-family: Arial, sans-serif;
+    font-size: 15px;
+}
+
 .link-button:hover {
     background-color: #45a049;
 }
